# build-game-with-ai

./: .env.template  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_demo.py  run_game.py
handson/agentic_game_demo/: README.md  agent.py  agent_setup.py  tools.py
handson/game_agent/: agent.py  mcp_server.py  tools.py
scripts/: run_server.ps1  run_server.sh  toggle_mode.py
solution/: .gitignore  README.md  check_agent.py  prompts.md  smoke_mcp.py
solution/agentic_game_demo/: README.md  __init__.py  agent.py  agent_setup.py  tools.py
solution/game_agent/: __init__.py  agent.py  mcp_server.py  tools.py
solution/indie_game_agent/: __init__.py  agent.py  mcp_server.py  runtime_bridge.py  settings.py  studio_domain.py  udp_game.py  vision.py
src/agentic_game_demo/: __init__.py  agent_setup.py  mcp_server.py
src/agentic_game_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/engine/: __init__.py
src/engine/game/: a2a_cards.py  (+6 more)
src/web/: index.html  main.js  styles.css
starter/: README.md  check_env.py  check_mcp.py  check_runtime.py  prompts.md  requirements.txt  run_game.py  smoke_mcp.py
starter/agentic_game_demo/: __init__.py  agent_setup.py
starter/indie_game_agent/: __init__.py  agent.py  logging_utils.py  mcp_server.py  settings.py  studio_domain.py  udp_game.py  vision.py
tests/: test_a2a_cards.py  test_agent_memory.py  test_hands_on_materials.py  test_mcp_discovery.py  test_memory.py  test_runtime_api.py  test_simulation.py  test_web_assets.py
web/: main.js  styles.css
(+15 files in other folders)
